add chat and phone

--- a/index.html
+++ b/index.html
@@ -379,14 +379,30 @@
         </div>
     </section>
 
+    <!-- Ton bouton chat -->
+    <button id="my-custom-chat-btn" class="floating-btn chat-btn">💬</button>
+    <!-- Bouton Téléphone -->
+    <a href="tel:+33768836705" id="my-phone-btn" class="floating-btn phone-btn pulse">📞</a>
 
+    <!-- Script Tawk.to -->
+    <script type="text/javascript ">
+        var Tawk_API = Tawk_API || {};
 
-
+        (function() {
+            var s1 = document.createElement("script "),
+                s0 = document.getElementsByTagName("script ")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/6981b9a2e4ef801c3fc86631/1jghbq8ud';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
 
     <!-- Bootstrap JS (Popper inclus) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js "></script>
     <!-- Librairie Typewriter -->
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js "></script>
     <script src="app.js "></script>
 </body>
 
