--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="img/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="développeuse web, création site internet, portfolio, logo, flyer, carte de visite, bootstrap, wordpress, SEO">
+    <meta name="keywords" content="développeuse web, création site internet, portfolio, logo, flyer, carte de visite, bootstrap, wordpress, SEO, Île-de-France">
     <meta name="author" content="Khaoula digital studio">
     <meta name="robots" content="index, follow">
 
-    <title>Khaoula digital studio | Développeuse Web Freelance</title>
-    <meta name="description" content="Développeuse web freelance, création de sites internet modernes en HTML, CSS, JavaScript. Projets PHP et WordPress disponibles sur GitHub.">
+    <title>Khaoula Digital Studio | Développeuse Web Freelance en Île-de-France</title>
+    <meta name="description" content="Développeuse web freelance en Île-de-France, création de sites internet modernes en HTML, CSS, JavaScript. Projets PHP et WordPress disponibles sur GitHub.">
     <!--font-->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
@@ -378,26 +378,9 @@
             </p>
         </div>
     </section>
-
-    <!-- Ton bouton chat -->
-    <button id="my-custom-chat-btn" class="floating-btn chat-btn">💬</button>
     <!-- Bouton Téléphone -->
     <a href="tel:+33768836705" id="my-phone-btn" class="floating-btn phone-btn pulse">📞</a>
 
-    <!-- Script Tawk.to -->
-    <script type="text/javascript ">
-        var Tawk_API = Tawk_API || {};
-
-        (function() {
-            var s1 = document.createElement("script "),
-                s0 = document.getElementsByTagName("script ")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/6981b9a2e4ef801c3fc86631/1jghbq8ud';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-    </script>
 
     <!-- Bootstrap JS (Popper inclus) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js "></script>
